# moon-bug

./: .dockerignore  .gitignore  .prototools  docker-compose.yml
.github/workflows/: lint.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: backend-application.yml
backend/: pyproject.toml
backend/apps/python_bot/: .gitignore  Dockerfile  README.md  docker-compose.yml  moon.yml  pyproject.toml
backend/apps/python_bot/python_bot/: main.py
scripts/: backend_start.py  compose_down.py  prestart.sh
