[project]
name = "python_bot"
version = "0.0.1"
description = "Example app that depends on chatwoot_api package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "chatwoot_api",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py313"
exclude = ["venv", ".venv", "tests"]
line-length = 90

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D107",   # undocumented-public-init
    "D212",   # multi-line-summary-first-line
    "E501",   # line-too-long
    "N999",   # invalid-module-name
    "CPY001", # missing-copyright-notice
    "FIX002", # line-contains-todo
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"
